# kafka-reader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  appsettings.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: rust.yml
.run/: Dockerfile.run.xml
kafka_reader/: Cargo.toml  build.rs
kafka_reader/src/: admin.rs  auth.rs  build_context.rs  commands.rs  connection_settings.rs  consumer.rs  consumer_wrapper.rs  contexts.rs  error.rs  format.rs  lib.rs  main.rs  message.proto  message.rs  message_metadata.rs  message_read.rs  old.rs  producer.rs  queries.rs  read_messages_request.rs  requests.rs  utils.rs
kafka_reader/src/admin/: admin_wrapper.rs
kafka_reader/src/auth/: bearer_token_provider.rs  client_credentials_bearer_token_provider.rs  client_credentilas_bearer_token_provider.rs  constant_bearer_token_provider.rs  empty_bearer_token_provider.rs  oidc_configuration.rs  oidc_token.rs
kafka_reader/src/commands/: produce_messages.rs
kafka_reader/src/commands/produce_messages/: handler.rs  request.rs  response.rs
kafka_reader/src/consumer/: consumer_settings.rs  consumer_wrapper.rs  message.rs  message_metadata.rs  metadata.rs  read_result.rs
kafka_reader/src/consumer/consumer_settings/: security_protocol.rs
kafka_reader/src/consumer/settings/: auto_offset_reset.rs  security_protocol.rs
kafka_reader/src/contexts/: build_context.rs  token_client_context.rs
kafka_reader/src/producer/: producer_wrapper.rs
kafka_reader/src/queries/: get_topic_lags.rs  read_messages.rs
kafka_reader/src/queries/get_cluster_metadata/: handler.rs  request.rs  response.rs
kafka_reader/src/queries/get_topic_lags/: handler.rs  query.rs  response.rs
kafka_reader/src/queries/get_topic_partitions_with_offsets/: handler.rs  request.rs  response.rs
kafka_reader/src/queries/read_messages/: handler.rs  models.rs  request.rs  response.rs
kafka_reader/src/queries/read_messages/models/: consume_counters.rs  format.rs  read_limit.rs  value_filter.rs
kafka_reader/src/read_messages_request/: format.rs  read_limit.rs  start_from.rs
kafka_reader/src/requests/: get_cluster_metadata.rs  read_messages_request.rs
kafka_reader/src/requests/get_cluster_metadata/: handler.rs
kafka_reader/src/requests/produce_messages/: handler.rs  request.rs
kafka_reader/src/requests/produce_messages_request/: handler.rs  request.rs
kafka_reader/src/requests/read_messages/: handler.rs  request.rs
kafka_reader/src/requests/read_messages/models/: start_from.rs  value_filter.rs
kafka_reader/src/requests/read_messages_request/: handler.rs  models.rs  request.rs
kafka_reader/src/requests/read_messages_request/models/: filter_condition.rs  filter_kind.rs  format.rs  read_limit.rs  start_from.rs  value_filter.rs
kafka_reader_api/: Cargo.toml  build.rs
kafka_reader_api/src/: api.rs  app_config.rs  docker-compose.yml  error.rs  kafka_api.rs  lib.rs  main.rs  reader_api.rs  startup.rs  time_util.rs
kafka_reader_api/src/api/: converters.rs  kafka_service.rs
kafka_reader_api/src/api/converters/: get_cluster_metadata.rs  get_lags.rs  get_topic_partition_offset.rs  produce_messages.rs  read_messages.rs  shared.rs
kafka_reader_api/src/kafka_api/: api.rs  converter.rs
kafka_reader_api/src/protos/: kafka_service.proto  reader_service.proto
kafka_reader_api/src/reader_api/: api.rs  converter.rs
kafka_reader_api/src/util/: mod.rs  stream_with_data.rs
kafka_reader_api/tests/: serialization.rs  snazzy.proto
proto_bytes_to_json_string_converter/: Cargo.toml
proto_bytes_to_json_string_converter/src/: dynamic.rs  holder.rs  lib.rs  preparer.rs  proto_descriptor_preparer.rs
proto_json_converter/: Cargo.toml
proto_json_converter/src/: dynamic.rs  preparer.rs
