[package]
name = "kafka_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
anyhow = "1.0.87"
tempfile = "3.12.0"
tracing = "0.1.40"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "fs", "macros", "rt"] }
tokio-util = "0.7.12"
rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl-vendored"] }
getset = "0.1.3"
chrono = "0.4.38"
regex = "1.10.6"
base64 = "0.22.1"
uuid = { version = "1.10.0", features = ["v7"] }

proto_json_converter = { path = "../proto_json_converter" }
