[package]
name = "kafka_reader_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7.12"
tokio-stream = "0.1.16"
tonic = { version = "0.12.2" }
tonic-reflection = "0.12.2"
prost = { version = "0.13.2" }
prost-types = { version = "0.13.2" }
config = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
pin-project-lite = "0.2.14"
regex = "1.10.6"
rayon = "1.10.0"

kafka_reader = { path = "../kafka_reader" }

[build-dependencies]
tonic-build = "0.12.2"

[dev-dependencies]
tonic = "0.12.2"
prost-types = "0.13.2"
prost = "0.13.2"
bytes = "1.7.1"

[profile.release]
lto = true
codegen-units = 1