[package]
name = "proto_json_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = { version = "3.7.1" }
protobuf-json-mapping = "3.7.1"
protobuf-parse = "3.7.1"
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["fs", "sync"] }
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["v4"] }
tar = "0.4.43"
flate2 = "1.0.35"
